--- a/src/components/pages/home/index.css
+++ b/src/components/pages/home/index.css
@@ -1,10 +1,30 @@
-.c-banner {
-    color: #fff;
+.section-fixed {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    transition: background .5s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.section-fixed>div {
+    will-change: transform, background-color;
+    transition: transform 1s cubic-bezier(.23, 1, .32, 1), background-color 1s cubic-bezier(.23, 1, .32, 1) !important;
+}
+
+.section-fixed .c-banner,
+.section-fixed .c-home-news {
     background: #000;
+}
+.section-fixed .section-scrolled {
+    background: #f7f7f7;
+}
+
+.c-banner, .c-home-news {
+    color: #fff;
     height: 100vh;
     display: flex;
     align-items: center;
     cursor: url('../../../assets//img/arrow-cursor.png'), auto;
+    transition: all ease-out;
 }
 
 .c-banner h1 {
@@ -31,4 +51,47 @@
     opacity: .55;
     width: 100%;
     max-width: 34%;
+}
+
+.section-scrolled {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    background-color: #f7f7f7;
+    overflow: auto;
+    overflow-x: hidden;
+    will-change: background-color;
+}
+
+.section-scrolled h3 {
+    font-size: 50em;
+}
+
+.chn__column {
+    width: 77%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+}
+.chn__column .chn__column_left {
+    width: 21.429%;
+}
+.chn__column .chn__column_right {
+    width: 78.571%;
+}
+.c-home__news__subtitle span {
+    font-weight: 700;
+    font-size: calc(13px + 0 * (100vw - 960px) / 960);
+    line-height: 1.8;
+    letter-spacing: .3em;
+    color: #555;
+    text-transform: uppercase;
+}
+.chn__column_right a{
+    font-size: 34px;
+    line-height: 2;
+    letter-spacing: .2em;
+    font-family: 'Lora', serif;
+    text-transform: uppercase;
+    color: #a4a4a4;
 }
