--- a/src/components/pages/home/index.css
+++ b/src/components/pages/home/index.css
@@ -8,6 +8,7 @@
 .section-fixed>div {
     will-change: transform, background-color;
     transition: transform 1s cubic-bezier(.23, 1, .32, 1), background-color 1s cubic-bezier(.23, 1, .32, 1) !important;
+     
 }
 
 .section-fixed .c-banner,
@@ -25,8 +26,11 @@
     align-items: center;
     cursor: url('../../../assets//img/arrow-cursor.png'), auto;
     transition: all ease-out;
+    position: relative;
 }
-
+.c-home-news{
+    border-top: solid 1px #000;
+}
 .c-banner h1 {
     font-family: Freight, sans-serif;
 }
@@ -35,22 +39,22 @@
     width: 80%;
     margin: 0 auto;
     position: relative;
+    z-index: 5
 }
 
 .c-brand {
     position: absolute;
-    top: 50;
-    left: 0;
+    left: -5px;
     min-width: 100%;
     max-width: 498px;
     transform: translateY(-50%);
-    margin: -10px 0 0px 20px;
+    margin: 0px 0 0px 20px;
 }
 
 .c-brand img {
     opacity: .55;
     width: 100%;
-    max-width: 34%;
+    max-width: 35%;
 }
 
 .section-scrolled {
@@ -60,7 +64,6 @@
     background-color: #f7f7f7;
     overflow: auto;
     overflow-x: hidden;
-    will-change: background-color;
 }
 
 .section-scrolled h3 {
@@ -68,30 +71,46 @@
 }
 
 .chn__column {
-    width: 77%;
+    width: 78%;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
 }
 .chn__column .chn__column_left {
     width: 21.429%;
+    height: 100%;
+    z-index: 5;
 }
 .chn__column .chn__column_right {
     width: 78.571%;
+    z-index: 5;
+}
+.c-home__news__subtitle {
+    margin-top: 27px;
 }
 .c-home__news__subtitle span {
     font-weight: 700;
-    font-size: calc(13px + 0 * (100vw - 960px) / 960);
+    font-size: calc(12px + 0 * (100vw - 960px) / 960);
     line-height: 1.8;
     letter-spacing: .3em;
     color: #555;
     text-transform: uppercase;
 }
 .chn__column_right a{
-    font-size: 34px;
+    font-size: 30px;
     line-height: 2;
     letter-spacing: .2em;
-    font-family: 'Lora', serif;
+    font-family: serif;
     text-transform: uppercase;
     color: #a4a4a4;
+    margin-right: 9% !important;
+    z-index: 999;
+}
+
+.c_click_area {
+    position: absolute;
+    background: #000;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
 }
