--- a/src/components/pages/home/styles/index.css
+++ b/src/components/pages/home/styles/index.css
@@ -1,20 +1,20 @@
-.section-fixed {
+.home-landing-section {
     position: fixed;
     width: 100%;
     height: 100%;
     transition: background .5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-.section-fixed>div {
+.home-landing-section>div {
     will-change: transform, background-color;
     transition: transform 1s cubic-bezier(.23, 1, .32, 1), background-color 1s cubic-bezier(.23, 1, .32, 1) !important;
      
 }
-.section-fixed .c-banner,
-.section-fixed .c-home-news {
+.home-landing-section .c-banner,
+.home-landing-section .c-home-news {
     background: #000;
 }
-.section-fixed .section-scrolled {
+.home-landing-section .section-scrolled {
     background: #f7f7f7;
 }
 .c-banner, .c-home-news {
@@ -34,9 +34,17 @@
     background-color: #f7f7f7;
     overflow: auto;
     overflow-x: hidden;
+    border-top: solid 1px #f7f7f7;
 }
 
-.section-scrolled h3 {
-    font-size: 50em;
+.p-home__section {
+    max-width: 1866.66667px;
+    min-height: 100vh;
+    padding-top: 130px;
+    padding-bottom: 130px;
+    overflow-x: hidden;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 5.556%;
+    padding-left: 5.556%;
 }
-
