--- a/src/index.css
+++ b/src/index.css
@@ -3,20 +3,34 @@
     padding: 0;
 }
 
+::selection {
+    background: transparent;
+}
+
 body {
     font-family: sans-serif;
+    color: #0c0c0d
 }
 
 a {
     display: block;
     text-decoration: none;
     -webkit-font-smoothing: antialiased;
+    color: inherit;
 }
 
 .font_weight_light {
     font-weight: 300;
 }
 
-h2 {
-    margin: 0 !important;
+video {
+    width: 100%;
+    height: 100%;   
+}
+
+h2,
+h3,
+h4 {
+    font-family: 'serif';
+    font-weight: 300;
 }
