--- a/src/components/reusable/header/header.css
+++ b/src/components/reusable/header/header.css
@@ -20,4 +20,8 @@
     text-transform: uppercase;
     width: 110px;
     float: right;
+    transition: color 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.c-menu > a.color-active{
+    
 }
